# Dix

./: .gitignore  ESTADO_PROYECTO.md  INFORME_DIX_V1_PARA_IA.md  README.md  boost_maximo.sh  index.html  lanzar.sh  lanzar_dix.sh  netlify.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml  release.yml
dix-proxy/src/: index.js
docs/: ORDEN_TRABAJO.md  privacy.html  terms.html  twitter_posts.md
landing/: .gitignore  chatbot.js  dixbot_final.js  dixbot_v2.css  dixbot_v2.js  index.html
landing/assets/: dixbot_spritesheet.json
landing/src/: dixbot.css  dixbot.js
src/: App.tsx  index.css  main.tsx  tauri-mock.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: atlas.rs  benchmark.rs  cache.rs  claude_gateway.rs  executor.rs  main.rs  memory.rs  policy.rs  scanner.rs  state.rs
src/remotion/: DixSequence.tsx
