[package]
name    = "dix"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "dix"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
tauri                 = { version = "2", features = ["image-png"] }
tauri-plugin-updater  = "2"
tauri-plugin-process  = "2"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
reqwest               = { version = "0.12", features = ["json"] }
tokio                 = { version = "1", features = ["full"] }
obfstr                = "0.4"

[target.'cfg(windows)'.dependencies]
winreg                = "0.52"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
